@@ -1,5 +1,5 @@
 AUX ccache-config 1627 RMD160 b5e6a9f509130abd657fd6ec297d7fcbdb094f9d SHA1 698c3235f0685e03f346e4b155897862560974ee SHA256 d438b7d266e17bf95d6c45e619ea8d9040217e70f34eac5cf6fae010f25bb72f
-DIST ccache-3.0pre0.tar.bz2 179291 RMD160 f3001bdb9a29aae874772a80cea2455c4fd5a275 SHA1 26bc8c67f0d7177cf6171cd3fdcd137dc8a67337 SHA256 dbdcbc9f10be423667f030a3a2bbd26b70ebb4821fcbd6547f6c9f9bb06d2b8f
-EBUILD ccache-3.0_pre0.ebuild 2478 RMD160 56b030f198e1a623fde48dec36ac9ac19aa4e99a SHA1 8f037f481db647b7f860c44e6e0eca27da8cbd73 SHA256 6bdc9b780f4d9a37cf7853ca6744d941d568852c2628129f0101083300dc057a
-MISC ChangeLog 367 RMD160 2345a0c579678d2a4bb4e03f1a6a2b3eef176761 SHA1 d3deaec4feadacaffe30bc6832f091588193f120 SHA256 d709342f0b9ff070fa328b1e5bc9df7950bf85cacc01bdf105dbcbf44ee47ebe
+DIST ccache-3.0pre1.tar.bz2 204331 RMD160 1e49880638dbe40544261964f829e5faf1278fd4 SHA1 7dd193bd92469162ab65ff53a78ad577e8f58813 SHA256 2c4c1f6b2b96e54b0702af0f1189fb903858a721a4534b8cc62e74ff320be073
+EBUILD ccache-3.0_pre1.ebuild 2606 RMD160 0034a073319bff6c5c9b14322de1bf7b5f035a5c SHA1 35adada58885ea38ab57e8654ff36a59e7886e15 SHA256 937e9609e6f14df51b34c923951d8aee836cff8c88dde811f5ae3fc4d7e68345
+MISC ChangeLog 546 RMD160 8faa491d5d6503e8884368463362a7dde30a7ce5 SHA1 f9d9d2cd953751f20c90df03b031bdce36adc767 SHA256 84cb11e247e3831eb86121ff6b01bdc7c71bffe929d0d99b54d21d45e96abf52
 MISC metadata.xml 444 RMD160 99f5113ff8f7ebb2f7ce3e33f855bc6846b8664e SHA1 fde0b5c2db7a88911d98a24052f39c1c525b872f SHA256 4ced2aa742fbd03c11aef10aecd4c62d93fd7f2036a69626d14eb762ae2c131d
