@@ -1,4 +1,4 @@
 DIST squash_dir-10.5.tar.bz2 18968 RMD160 6723cf59bda831ce3c942a1586625b235c1002e1 SHA1 eaf6dbd49a73305c6900ce8c8cef832034019ff6 SHA256 bc240b798201e103096afd7f9c5d7776af849262acf6644ee3d68c8916041b4b
-EBUILD squash_dir-10.5.ebuild 1604 RMD160 fd248bbcf74216be3be02a78e9af45d0fb880aad SHA1 6f6e7981a581c3f169dd07077fbb887841a6730d SHA256 f5a92d372517e34309618e009eb9b19cd1cf756d244a4ecee87275effa41c648
-MISC ChangeLog 1036 RMD160 858d61e5c8903eea9fe51b62bd7f2c61ec865853 SHA1 0bd82d95b0773c9075ded400791af787b9557045 SHA256 1dbf2760f9234b2d3db3a8956a9a4f92a4100350f4272f2dd8ba9e32087ae1f4
+EBUILD squash_dir-10.5.ebuild 1928 RMD160 47a2e2cf13384a5008ea66a8ab301842c22d91ad SHA1 cecc41428002f9d6073c4af7bea9a4918facab98 SHA256 28e0321faced4d172c7231e3ad58bc697ad130f2926d141d614a45012757181c
+MISC ChangeLog 1211 RMD160 d5f8198304c1ef84cc4e9c7f8869374df7b8fa7a SHA1 8eb562da23da4b0d0767c9c5eeab90ab58a940ee SHA256 634eeb2ff0dc850b6dc5e20367a2a72aa43fbc7885748112c730c9f7133fc44f
 MISC metadata.xml 524 RMD160 695348b2ec91e6e657132f92d92355b3a9aa9cb3 SHA1 031aa7e4a43e9653e6ff5f5760f109cff893278c SHA256 9f7f3ee8acbeea6d82c33bfbab9ddf6076bac7f80f5789c95173223c2c658037
