@@ -2,6 +2,12 @@
 # Copyright 2002-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*ccache-3.0-pre1 (22 May 2010)
+
+  22 May 2010; Martin Väth <martin@mvath.de>
+  revbump; remove old.
+  Add zlib dependency. Put CCACHE_COMPRESS=true into env.d
+
   07 Apr 2010; Martin Väth <martin@mvath.de>
   Add RESTRICT="mirror"
 
